# you-are-my-eyes

./: README.md  package-lock.json  package.json  uniflourish.keystore  vite.config.ts
.github/workflows/: release.yml
bundle/dmg/: icon.icns
bundle/macos/Uniflourish.app/Contents/: Info.plist
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
